Add import/export scope + improved dynamic parameters management